# rusty-yabai-master-stack-plugin

./: .env  .gitignore  Cargo.toml  README.md  state.json
src/: macros.rs  main.rs  types.rs
src/context/: display.rs  mod.rs  space.rs  state.rs  window.rs
src/context/window/: check_valid_layout.rs  is_valid_layout.rs  mod.rs  update_windows.rs
src/run_commands/: close_focused_window.rs  decrease_master_window_count.rs  focus_down_window.rs  focus_up_window.rs  increase_master_window_count.rs  mod.rs
src/trigger_commands/: mod.rs  window_created.rs  window_moved.rs  yabai_started.rs
src/utils/: lock.rs
