[package]
name = "rusty-yabai-master-stack-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.69"
anyhow = "1.0.45"
run_script = "0.9.0"
load-dotenv = "0.1.2"